force-app/main/default/objects/E2CP__Case_Comment_Draft__c/E2CP__Case_Comment_Draft__c.object-meta.xml
<CustomObject>
    <label>Case Comment Draft</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Comment Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comment Drafts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>