force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__BCC__c.field-meta.xml
<CustomField>
    <fullName>E2CP__BCC__c</fullName>
    <description>Stores recipients entered on the New Comment page in the BCC field.</description>
    <label>BCC</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>