force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Comment_Body__c</fullName>
    <label>Comment Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>