force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Public__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Public__c</fullName>
    <defaultValue>true</defaultValue>
    <description>New Comment page Public/Private toggle value.</description>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>