force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Recipients_Available__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Recipients_Available__c</fullName>
    <description>Stores recipients from the New Comment page available field.</description>
    <label>Recipients Available</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>