force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Schedule_Comment_For__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Schedule_Comment_For__c</fullName>
    <description>Date and time of when the comment should be sent out.</description>
    <label>Schedule Comment For</label>
    <type>DateTime</type>
</CustomField>