force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Selected_Files__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Selected_Files__c</fullName>
    <description>Stores IDs of the selected files on the New Comment page.</description>
    <label>Selected Files</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>