force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Template_Locked__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Template_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Comment page email template has a user specified value.</description>
    <label>Template Locked</label>
    <type>Checkbox</type>
</CustomField>