force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__User__c.field-meta.xml
<CustomField>
    <fullName>E2CP__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Comment_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>