force-app/main/default/objects/E2CP__Case_Comment_Draft__c/fields/E2CP__Widespread_Issue__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Widespread_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Widespread Issue</label>
    <referenceTo>E2CP__Widespread_Issue__c</referenceTo>
    <relationshipLabel>Case Comment Drafts</relationshipLabel>
    <relationshipName>Case_Comment_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>